data/derived/comb/progs/unify/prog2858.ml.out
Characters 52-89:
  |_ -> (n mod 10 :: [], digitsOfInt( n /10));;
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
